Update the book

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 <p>Distilling community building to a formula is no simple task, and it is also not our intention here. Instead, we aim to open a two-way dialogue with the reader, and discuss the general direction we should move in. As a result, this public good may seem incomplete, and it shall always be so.</p>
 <p>As participants in communities, we are all well aware of the infinite ways through which communities rise and fall. Further, technological developments add layers on these processes which breaks certains ground rules and introduces new ones.</p>
 <p>For example, the rules of building a decentralized, digital community are slightly different from building one irl. This playbook focusses mainly on these type of communities, and highlights the concepts and practices that have <em>seemed</em> to work so far.</p>
-<p>We invite you to share your experiences so we may refine this playbook, and make it a possible reference point for the community builders of tomorrow.</p>
+<p>We invite you to share your experiences so we may refine this playbook, and make it a possible reference point for the community builders of tomorrow. 😄</p>
 
 </div>
             </section>
