Update the book

--- a/index.html
+++ b/index.html
@@ -200,10 +200,7 @@
 <li>And, most importantly, how does one start a community around an interest or a goal?</li>
 </ul>
 <p>To answer these questions, we started putting together this community building playbook as a public good. And we invite you to co-create it with us!</p>
-<div class="figure">
-<img src="img/cover.png" alt="" />
-<p class="caption">This playbook is incomplete.</p>
-</div>
+<p><img src="img/cover.png" /></p>
 <p>Distilling community building to a formula is no simple task, and it is also not our intention here. Instead, we aim to open a two-way dialogue with the reader, and discuss the general direction we should move in. As a result, this public good may seem incomplete, and it shall always be so.</p>
 <p>As participants in communities, we are all well aware of the infinite ways through which communities rise and fall. Further, technological developments add layers on these processes which breaks certains ground rules and introduces new ones.</p>
 <p>For example, the rules of building a decentralized, digital community are slightly different from building one irl. This playbook focusses mainly on these type of communities, and highlights the concepts and practices that have <em>seemed</em> to work so far.</p>
