Update the book

--- a/index.html
+++ b/index.html
@@ -193,6 +193,12 @@
 </div>
 <div id="hey-there" class="section level1 unnumbered hasAnchor">
 <h1>Hey there!<a href="index.html#hey-there" class="anchor-section" aria-label="Anchor link to header"></a></h1>
+<style type="text/css">
+.book .book-body .page-wrapper .page-inner section.normal h1 {
+    font-size: 0;
+}
+</style>
+<p><img src="img/cover.png" /></p>
 <p>In our quest to help communities maximise their potential, we couldn’t help but try and understand how communities work at a deeper level.</p>
 <ul>
 <li>What dynamics govern them?</li>
@@ -200,7 +206,6 @@
 <li>And, most importantly, how does one start a community around an interest or a goal?</li>
 </ul>
 <p>To answer these questions, we started putting together this community building playbook as a public good. And we invite you to co-create it with us!</p>
-<p><img src="img/cover.png" /></p>
 <p>Distilling community building to a formula is no simple task, and it is also not our intention here. Instead, we aim to open a two-way dialogue with the reader, and discuss the general direction we should move in. As a result, this public good may seem incomplete, and it shall always be so.</p>
 <p>As participants in communities, we are all well aware of the infinite ways through which communities rise and fall. Further, technological developments add layers on these processes which breaks certains ground rules and introduces new ones.</p>
 <p>For example, the rules of building a decentralized, digital community are slightly different from building one irl. This playbook focusses mainly on these type of communities, and highlights the concepts and practices that have <em>seemed</em> to work so far.</p>
